# valFuzz

./: .gitignore  BUILD  CMakeLists.txt  Makefile  README.md  WORKSPACE  doxygen.conf  flake.nix
.github/workflows/: cmake-single-platform.yml  static.yml
docs/: .gitignore  build-gtests.sh  doxygen-awesome.css  doxygen.conf  gbenchmarks.cpp  valfuzz.doxygen
docs/html/: CONTRIBUTING_8md.html  annotated.html  annotated_dup.js  benchmark_8cpp.html  benchmark_8cpp.js  benchmark_8cpp_source.html  benchmark_8hpp.html  benchmark_8hpp.js  benchmark_8hpp_source.html  classes.html  classvalfuzz_1_1csv__reporter.html  classvalfuzz_1_1csv__reporter.js  classvalfuzz_1_1default__reporter.html  classvalfuzz_1_1default__reporter.js  classvalfuzz_1_1none__reporter.html  classvalfuzz_1_1none__reporter.js  classvalfuzz_1_1reporter.html  classvalfuzz_1_1reporter.js  classvalfuzz_1_1reporter__engine.html  classvalfuzz_1_1reporter__engine.js  common_8cpp.html  common_8cpp.js  common_8cpp_source.html  common_8hpp.html  common_8hpp.js  common_8hpp_source.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_49e56c817e5e54854c35e136979f97ca.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_84ffc79c150a781b82e7060f67932421.html  dir_84ffc79c150a781b82e7060f67932421.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  fuzz_8cpp.html  (+51 more)
docs/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_3.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  files_0.js  files_1.js  files_2.js  files_3.js  files_5.js  files_6.js  functions_0.js  functions_1.js  functions_2.js  (+21 more)
examples/: simple_fuzz.cpp
include/test/: test.hpp
include/valfuzz/: BUILD  benchmark.hpp  common.hpp  fuzz.hpp  reporter.hpp  test.hpp  valfuzz.hpp
plotting/: README.md  flake.nix  requirements.txt  simple_plot.ipynb  test_data.txt
plotting/data/: data.py  sys_data.py
plotting/notebooks/: bandwidth.ipynb  roofline_model.ipynb  simple_plot.ipynb  transpose.ipynb
src/: BUILD  benchmark.cpp  common.cpp  fuzz.cpp  reporter.cpp  test.cpp  valfuzz.cpp
tests/: BUILD  asserts_test.cpp  before_after_test.cpp  benchmark_test.cpp  flake.nix  generate_random_test.cpp  simple_fuzz.cpp  tests.cpp
utils/: .clang-format  clock_precision.cpp
